cleaning pom.xml s